banner border added

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
      </h1>
     </div>
     <div>
-     <p>
+     <p class="feature-text">
       Watch this one minute video so you understand why you should <br />
       use our services!
      </p>
@@ -86,6 +86,14 @@
    <div class="container feature-image">
     <img src="./src/img/feature-image.png" class="img-fluid" alt="" />
     <button class="feature-play-btn"></button>
+   </div>
+  </section>
+  <section class="service-section">
+   <div class="container">
+    <h1 class="service-title">
+     The Service We Provide <br />
+     For You
+    </h1>
    </div>
   </section>
  </body>
