--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
    crossorigin="anonymous"
   ></script>
+  <!-- Font awesome link -->
+  <script
+   src="https://kit.fontawesome.com/661efb6181.js"
+   crossorigin="anonymous"
+  ></script>
   <!-- CSS File Link -->
   <link rel="stylesheet" href="main.css" />
   <!-- google fonts -->
@@ -91,9 +96,83 @@
   <section class="service-section">
    <div class="container">
     <h1 class="service-title">
+     <i class="triangle-3"></i>
+     <i class="triangle-4"></i>
      The Service We Provide <br />
      For You
+     <i class="cross"></i>
     </h1>
+    <div class="row services-items">
+     <div class="col-md-4 col-12">
+      <i class="fas fa-laptop-code dev-icon"></i>
+      <h3 class="my-3">Development</h3>
+      <p class="service-text">
+       Create a platform with the best <br />
+       and coolest quality from us.
+      </p>
+     </div>
+     <div class="col-md-4 col-12">
+      <i class="fas fa-layer-group"></i>
+      <h3 class="my-3">UI/UX Design</h3>
+      <p class="service-text">
+       Create a platform with the best <br />
+       and coolest quality from us.
+      </p>
+     </div>
+     <div class="col-md-4 col-12">
+      <i class="fas fa-laptop-code graphics-icon"></i>
+      <h3 class="my-3">Graphik Designer</h3>
+      <p class="service-text">
+       Create a platform with the best <br />
+       and coolest quality from us.
+      </p>
+     </div>
+     <div class="col-md-4 col-12 my-5">
+      <i class="fas fa-map-signs"></i>
+      <h3 class="my-3">Motion Graphik</h3>
+      <p class="service-text">
+       Create a platform with the best <br />
+       and coolest quality from us.
+      </p>
+     </div>
+     <div class="col-md-4 col-12 my-5">
+      <i class="fas fa-camera-retro"></i>
+      <h3 class="my-3">Photography</h3>
+      <p class="service-text">
+       Create a platform with the best <br />
+       and coolest quality from us.
+      </p>
+     </div>
+     <div class="col-md-4 col-12 my-5">
+      <i class="fas fa-film"></i>
+      <h3 class="my-3">Videography</h3>
+      <p class="service-text">
+       Create a platform with the best <br />
+       and coolest quality from us.
+      </p>
+     </div>
+    </div>
+   </div>
+  </section>
+  <section class="portfolio-section">
+   <div class="container">
+    <h1 class="portfolio-title my-5">
+     <i class="cross-2"></i>
+     <i class="circles-2"></i>
+     Our Awsome Portfolio
+    </h1>
+
+    <div class="row justify-content-center">
+     <div class="col-lg-4 col-md-4 col-sm-12 portfolio-image">
+      <img class="portfolio-img-1" src="./src/img/image 28.png" alt="" />
+     </div>
+     <div class="col-lg-4 col-md-4 col-sm-12 portfolio-image">
+      <img class="portfolio-img-2" src="./src/img/image 29.png" alt="" />
+     </div>
+     <div class="col-lg-4 col-md-4 col-sm-12 portfolio-image">
+      <img class="portfolio-img-3" src="./src/img/image 30.png" alt="" />
+     </div>
+    </div>
    </div>
   </section>
  </body>
