--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
       <img class="portfolio-img-3" src="./src/img/image 30.png" alt="" />
      </div>
     </div>
+    <div class="btn-container text-center my-5">
+     <button class="btn-1"></button>
+     <button class="btn-2"></button>
+     <button class="btn-3"></button>
+    </div>
    </div>
   </section>
  </body>
