contact section done

--- a/index.html
+++ b/index.html
@@ -174,9 +174,27 @@
      </div>
     </div>
     <div class="btn-container text-center my-5">
+     <i class="zigzag-2"></i>
      <button class="btn-1"></button>
      <button class="btn-2"></button>
      <button class="btn-3"></button>
+    </div>
+   </div>
+  </section>
+  <section class="contact-section">
+   <div class="container">
+    <div class="row d-flex justify-content-around align-items-center">
+     <div class="col-md-6 col-12">
+      <h1 class="display-5 fw-bold contact-text">
+       <i class="circles-3"></i>
+       Contact us for the service <br />
+       you want to use
+       <i class="plus-2"></i>
+      </h1>
+     </div>
+     <div class="col-md-6 col-12 text-end px-4">
+      <button class="btn-regular px-4 fs-5">Contact us</button>
+     </div>
     </div>
    </div>
   </section>
