--- a/index.html
+++ b/index.html
@@ -189,14 +189,36 @@
        <i class="circles-3"></i>
        Contact us for the service <br />
        you want to use
-       <i class="plus-2"></i>
       </h1>
      </div>
-     <div class="col-md-6 col-12 text-end px-4">
-      <button class="btn-regular px-4 fs-5">Contact us</button>
+     <div class="col-md-6 col-12 text-md-end px-md-4">
+      <button class="btn-regular px-4 fs-5 contactus-text">
+       Contact us
+       <i class="plus-2"></i>
+      </button>
      </div>
     </div>
    </div>
   </section>
+  <footer>
+   <div class="container">
+    <div class="row">
+     <div class="col-12 col-md-4 footer-logo">
+      <div>
+       <img src="./src/img/agency-logo.png" class="img-fluid" alt="" />
+      </div>
+      <h2 class="ms-md-2 my-0">Enver</h2>
+     </div>
+     <div class="col-12 col-md-4 footer-links">
+      <a href="">Support</a>
+      <a href="">Privacy Policy</a>
+      <a href="">Terms and Conditons</a>
+     </div>
+     <div class="col-12 col-md-4 footer-copyright">
+      <p>&#169; 2022 Enver. All Rights Reserved</p>
+     </div>
+    </div>
+   </div>
+  </footer>
  </body>
 </html>
