banner img fixed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
    <section class="container banner-section">
     <div class="row banner-section d-flex justify-content-between">
-     <div class="col-lg-6 col-md-6 col-12">
+     <div class="col-md-6 col-12">
       <h1 class="slogan">
        Build Your <br />
        Awesome <br />
@@ -62,11 +62,14 @@
        Our Services <span class="btn-arrow"></span>
       </button>
      </div>
-     <div class="banner-image col-lg-4 col-md-4 col-12">
+     <div class="banner-image mt-5 mt-md-0 col-md-4 col-12">
       <i class="zigzag"></i>
       <i class="triangle-1"></i>
       <i class="triangle-2"></i>
-      <img class="person img-fluid" src="src/img/young-guy.png" alt="" />
+      <div class="person">
+       <img class="img-fluid" src="src/img/young-guy.png" alt="" />
+      </div>
+
       <i class="circles"></i>
       <i class="plus"></i>
      </div>
